--- a/styles/index.css
+++ b/styles/index.css
@@ -24,9 +24,6 @@ header h1 {
     transition: color 0.5s;
     animation: floaty 1.4s infinite alternate;
 }
-header h1:hover {
-    color: #5a9296;
-}
 @keyframes floaty {
     from {bottom: 0;}
     to {bottom: 0.6rem;}
@@ -44,11 +41,6 @@ nav a {
 
     bottom: 0;
     transition: bottom 0.5s;
-}
-nav a:hover {
-    background-color: black;
-    color: white;
-    bottom: 0.15rem;
 }
 
 /* DECORATION. Note that these are absolute relative to the header. */
@@ -69,6 +61,18 @@ nav a:hover {
 }
 
 /* MEDIA QUERIES */
+
+@media (hover: hover) {
+    header h1:hover {
+        color: #5a9296;
+    }
+
+    nav a:hover {
+        background-color: black;
+        color: white;
+        bottom: 0.15rem;
+    }
+}
 
 @media screen {
     header h1 {
@@ -180,35 +184,15 @@ nav a:hover {
     }
 
     .block1 {
-        bottom: 40px;
-        right: -5%;
-        height: 2rem;
-        width: 2rem;
-    }
-    @keyframes up1 {
-        from {bottom: 40px;}
-        to {bottom: 45px;}
+        display: none;
     }
     .block2 {
-        bottom: 70px;
-        right: 10%;
-        height: 1rem;
-        width: 1rem;
-    }
-    @keyframes up2 {
-        from {bottom: 70px;}
-        to {bottom: 75px;}
+        display: none;
     }
     .c1 {
-        left: -10%;
-        height: 5rem;
-        width: 5rem;
-        bottom: 60px;
+        display: none;
     }
     .c2 {
-        left: -13%;
-        height: 2rem;
-        width: 2rem;
-        bottom: 45px;
+        display: none;
     }
 }
