--- a/styles/index.css
+++ b/styles/index.css
@@ -12,6 +12,7 @@ main {
 header {
     display: flex;
     flex-flow: column;
+    justify-content: flex-end;
     position: relative;
 
     text-align: center;
@@ -43,17 +44,6 @@ nav a {
     transition: bottom 0.5s;
 }
 
-/* DECORATION. Note that these are absolute relative to the header. */
-
-.deco {
-    position: absolute;
-}
-.circle {
-    background-color: #cecece;
-    border-radius: 50%;
-    opacity: 0.3;
-}
-
 /* MEDIA QUERIES */
 
 @media (hover: hover) {
@@ -77,29 +67,6 @@ nav a {
     nav a {
         margin: 0 0.625rem 0.625rem 0.625rem;
     }
-
-    .block1 {
-        bottom: 100px;
-        right: -5%;
-    }
-    .block2 {
-        bottom: 160px;
-        right: 7%;
-        height: 3rem;
-        width: 3rem;
-    }
-    .c1 {
-        left: -12%;
-        height: 9rem;
-        width: 9rem;
-        bottom: 111px;
-    }
-    .c2 {
-        left: -20%;
-        height: 6rem;
-        width: 6rem;
-        bottom: 50px;
-    }
 }
 
 @media screen and (max-width:50rem) {
@@ -115,31 +82,6 @@ nav a {
 
     .ground-scale {
         width: 25rem;
-    }
-
-    .block1 {
-        bottom: 70px;
-        right: -5%;
-        height: 3rem;
-        width: 3rem;
-    }
-    .block2 {
-        bottom: 115px;
-        right: 9%;
-        height: 2rem;
-        width: 2rem;
-    }
-    .c1 {
-        left: -12%;
-        height: 7rem;
-        width: 7rem;
-        bottom: 80px;
-    }
-    .c2 {
-        left: -20%;
-        height: 4rem;
-        width: 4rem;
-        bottom: 48px;
     }
 }
 
@@ -159,30 +101,5 @@ nav a {
 
     .ground-scale {
         width: 15rem;
-    }
-
-    .block1 {
-        bottom: 40px;
-        right: -6%;
-        height: 2rem;
-        width: 2rem;
-    }
-    .block2 {
-        bottom: 70px;
-        right: 9%;
-        height: 1.25rem;
-        width: 1.25rem;
-    }
-    .c1 {
-        left: -14%;
-        height: 4rem;
-        width: 4rem;
-        bottom: 47px;
-    }
-    .c2 {
-        left: -19%;
-        height: 2rem;
-        width: 2rem;
-        bottom: 30px;
     }
 }
